# JingWei

./: .gitignore  CMakeLists.txt
.github/skills/create-file/: SKILL.md
.github/skills/create-skill/: SKILL.md
.github/skills/jingwei-architecture/: SKILL.md
.github/skills/jingwei-modules/: SKILL.md
.github/skills/jingwei-multi-processes/: SKILL.md
playground/: CMakeLists.txt  drm_test.c  fbdev_test.c  sdl2_test.c
playground/multi_process/: CMakeLists.txt  jw_mt_core.c  mt_client.c  mt_client_2.c  protocol.h  shm_helper.h
